# enum-macros

./: Cargo.toml
enum-tag/: Cargo.toml
enum-tag/src/: lib.rs
src/: debug_wrapper.rs  extract_variant.rs  lib.rs  tagged.rs  variant_implement.rs  variant_of.rs  variant_wrapper.rs
src/common/: mod.rs
tests/: tagged.rs  test.rs  test_extra_extract_variant.rs  test_extract_variant.rs  test_extract_variant_empty_args.rs  test_extract_variant_prefix_lit.rs  test_extract_variant_prefix_path.rs  test_extract_variant_suffix_lit.rs  test_extract_variant_suffix_path.rs  test_tagged.rs  test_variant_wrapper.rs
tests/ui/: duplicate.rs  duplicate.stderr  extract_variant_no_impl.rs  extract_variant_no_impl.stderr
