[package]
name = "enum-macros"
version = "0.1.0"
edition = "2021"
license = "MIT-0"
description = "Add macros to work with enums and their variants."
# readme = ""
# repository = ""
categories = ["rust-patterns"]
keywords = ["enum", "macro", "variant"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tap = "1.0"

[dev-dependencies]
trybuild = "1.0"
